# terminal-media-launcher

./: .gitignore  AUTHORS  Makefile  Makefile.am  Makefile.in  aclocal.m4  cache.c  compile_commands.json  configure  configure.ac  draw.c  draw.h  entry.c  entry.h  group.c  group.h  read_cfg.c  read_cfg.h  structures.c  tasklist.md  tml
actions/: Makefile.am  README.md  build_deb.sh  build_rpm.sh
data/: Makefile.am  Makefile.in  icon.dia  terminal-media-launcher.desktop.in
debian/: README.Debian  changelog  control  copyright  install  rules
docs/: Makefile.am  Makefile.in  README.md  terminal-media-launcher-config.md  tml-config.md  windows_compile_instructions.md
icon/: Makefile.am  Makefile.in  terminal-media-launcher.desktop  tml.desktop
include/: cache.h  draw_extend.h  read_cfg.h  read_cfg_extend.h
man/: terminal-media-launcher-config.5  terminal-media-launcher.1
nsis/: Makefile.am  Makefile.in  find_dlls.sh  find_dlls_wip.sh  installer.nsi  installer.nsi.in
spec/: Makefile.am  Makefile.in  terminal-media-launcher.spec  terminal-media-launcher.spec.in
src/: Makefile.am  Makefile.in  cache.c  draw.c  entry.c  group.c  read_cfg.c
src/icon/: terminal-media-launcher.rc
src/include/: cache.h  draw.h  entry.h  group.h  read_cfg.h
src/unix/: cache.c  draw.c  read_cfg.c
src/windows/: draw.c  read_cfg.c
unix/: cache.c  draw.c  draw.h  read_cfg.c  read_cfg.h
windows/: cache.c  draw.c  draw.h  make_icon.rc  read_cfg.c  read_cfg.h
